--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 addopts = -s -p no:warnings --alluredir report
 testpaths = ./scripts
-python_files = test01*.py
+python_files = test*.py
 python_classes = Test*
 python_functions = test*
